Update character-magic-subtheme knacks open by default, added expand/collapse all button Update character-subtheme-modal passing in correct object type to magic component Update build/spell selection, each selection is open by default

--- a/src/app/character-sheet/character-subtheme-modal/character-magic-subtheme/character-magic-subtheme.component.css
+++ b/src/app/character-sheet/character-subtheme-modal/character-magic-subtheme/character-magic-subtheme.component.css
@@ -6,3 +6,15 @@
   background-color: #ededed;
 }
 
+.rowEnder {
+  padding-bottom: 10px;
+}
+
+#displayKnackButton {
+  margin-top: -30px;
+}
+
+#openAllKnacks {
+  margin-top: -30px;
+}
+
